# fitbit2garmin

./: .gitignore  license  pyproject.toml  readme.md
.github/workflows/: lint.yml
fitbit2garmin/: aiohttp_fitbit_api.py  cli.py  commands.py  fitbit_api.py
